# KWPBridge

./: .gitignore  README.md  kwpbridge.spec  kwpbridge_gui.py  pyproject.toml
docs/: INTEGRATION.md
kwpbridge/: __init__.py  __main__.py  client.py  constants.py  ecu_defs.py  formula.py  kwp2000.py  lbl_parser.py  models.py  protocol.py  protocol_detect.py  server.py
labels/: 00-01.lbl  01L-927-156.lbl  01M-927-733.lbl  01N-927-733.lbl  01V-927-156.lbl  02-22.lbl  021-906-018-AFP.lbl  021-906-258.lbl  022-906-032-BDB.lbl  022-906-032-KU.lbl  023-906-022.lbl  023-906-024.lbl  030-906-032-AUD.lbl  036-906-041.lbl  037-906-018-ABA.lbl  037-906-023-160.lbl  037-906-023-R.lbl  037-906-023.lbl  037-906-025-AFT.lbl  037-906-259.lbl  038-906-019-ARL.lbl  038-906-019-ASZ.lbl  038-906-019-AXR.lbl  039-906-022-ABK.lbl  03C-906-056-BAG.lbl  03E-906-033-AZQ.lbl  046-907-401-AEL.lbl  058-906-018-ATW.lbl  058-907-55x-AEBN.lbl  06A-906-018-AEG.lbl  06A-906-018-AGU.lbl  06A-906-018-AQY.lbl  06A-906-032-AMU.lbl  06A-906-032-AWV.lbl  06A-906-032-AWW.lbl  06A-906-032-BAM.lbl  06A-906-032-BBW.lbl  06A-906-032-BKF.lbl  06A-906-033-APF.lbl  06A-906-033-AVU.lbl  (+546 more)
scaling/: Diesel - Air Mass, Boost Control & Limitations.a01  Diesel - Coolant, Injection Start, Supply Duration & Torsion Angle.a01  Diesel - Idle Control, Valve Status & Switch Times.a01  Diesel - Limitations & Air Values.a01  Gasoline (2.0 TFSI) - Boost and Fueling Diagnosis.a01  Gasoline (2.0 TFSI) - Boost, EGT and Timing Diagnosis.a01  Gasoline (2.0 TFSI) - Detailed Timing Diagnosis.a01  OBD.SCL  README.md  (+7 more)
(+619 files in other folders)
