[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwpbridge"
version = "0.4.0"
description = "KWP1281 / K-Line diagnostic bridge for VAG vehicles"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
gui   = ["PyQt5>=5.15"]
build = ["PyQt5>=5.15", "pyinstaller>=6.0"]
dev   = ["pytest", "pytest-cov", "pytest-timeout"]

[project.scripts]
kwpbridge     = "kwpbridge.__main__:main"
kwpbridge-gui = "kwpbridge.gui.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["kwpbridge*"]

[tool.setuptools.package-data]
kwpbridge = ["py.typed"]

[tool.pytest.ini_options]
timeout = 10
